2008-07-30  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* configure.ac: Use ${enableval} in
	--enable-plugin.
	
2008-07-29  Joshua Sumali  <jsumali@redhat.com>

	* .hgignore: Updated.
	* Makefile.am (stamps/visualvm.stamp): New target.
	(stamps/nbplatform.stamp): Likewise.
	(clean-visualvm): Likewise.
	(clean-nbplatform): Likewise.
	(visualvm): Likewise.
	(nbplatform): Likewise.
	(stamps/download.stamp): Download visualvm and netbeans sources.
	(stamps/extract.stamp): Extract visualvm and netbeans sources.
	(distclean-local): Add visualvm and netbeans.
	(.PHONY): Add clean-visualvm and clean-nbplatform.
	* README: Added VisualVM section.
	* acinclude.m4	(WITH_VISUALVM_SRC_ZIP)i: New.
	(WITH_NETBEANS_PLATFORM_SRC_ZIP): Likewise.
	(WITH_NETBEANS_PROFILER_SRC_ZIP): Likewise.
	* configure.ac: Use WITH_VISUALVM_SRC_ZIP,
	WITH_NETBEANS_PLATFORM_SRC_ZIP, and	WITH_NETBEANS_PROFILER_SRC_ZIP. 
	Also add --enable-visualvm option.

2008-07-27  Matthias Klose  <doko@ubuntu.com>

	* patches/icedtea-zero.patch: Add support for hppa.

2008-07-26  Matthias Klose  <doko@ubuntu.com>

	* patches/icedtea-hotspot-citypeflow.patch: New.
	* Makefile.am (ICEDTEA_PATCHES): Add patch.
	* HACKING: Document.

2008-07-26  Matthias Klose  <doko@ubuntu.com>

	* patches/icedtea-arm-uname.patch: Rename to ...
	* patches/icedtea-uname.patch: Fix architecture string for mipsel.
	* patches/icedtea-zero.patch: Add support for alpha, m68k, mips{,el}.
	* patches/icedtea-alpha-fixes.patch: New, fixes for alpha-linux.
	* Makefile.am (ICEDTEA_PATCHES): Rename patch, add patch.

2008-07-24  Matthias Klose  <doko@ubuntu.com>

	* configure.ac: Fix bashisms.
	* Makefile.am: Likewise.

2008-07-24  Matthias Klose  <doko@ubuntu.com>

	* Makefile.am (stamps/bootstrap-directory-ecj.stamp): Fix typo.

2008-07-24  Matthias Klose  <doko@ubuntu.com>

	* patches/icedtea-hotspot-gcc-pr36917.patch: New.
	* Makefile.am: Apply.
	* HACKING: Document.

2008-07-24  Matthias Klose  <doko@ubuntu.com>
