@@ -1,3 +1,8 @@
+2008-07-31  Matthias Klose  <doko@ubuntu.com>
+
+	* acinclude.m4 (SET_ARCH_DIRS): Avoid calling uname for alpha,
+	mips, mipsel, s390.
+
 2008-07-30  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
 	* configure.ac: Use ${enableval} in
